# TrianglesIntersection

./: CMakeLists.txt  CMakeUserPresets.json  LICENSE  README.md
include/: Algorithm.h  Figures.h  Interface.h
src/: Algorithm.cpp  Application.cpp  Figures.cpp  Interface.cpp
test/: test.cpp
tests/: main.cpp
